--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
       </header>
 
       <div class="ftco-blocks-cover-1">
-        <div class="ftco-cover-1 overlay" style="background-image: url('https://images.impresa.pt/expresso/2019-09-20-foto--Jose-Carlos-Carvalho.jpg-1/original/mw-1920')">
+        <div class="ftco-cover-1 overlay" style="background-image: url('https://i.imgur.com/ukIxBuc.jpg')">
           <div class="container">
             <div class="row align-items-center">
               <div class="col-lg-6">
